# 2DPhysicsFloorplanner

./: CMakeLists.txt  README.md  main.cpp
BaseUtils/: Point2D.cpp  Point2D.h  Vector2.cpp  Vector2.h
Data/FPGAData/: Block.h  Board.cpp  Board.h
Data/ProblemData/: Problem.cpp  Problem.h  ProblemRegion.cpp  ProblemRegion.h  RegionIOData.cpp  RegionIOData.h  RegionType.h
FileManagement/: FileManager.cpp  FileManager.h
RealProblems/: 10_70.txt  10_75.txt  10_80.txt  10_85.txt  15_70.txt  15_75.txt  15_80.txt  15_85.txt  20_70.txt  20_75.txt  20_80.txt  20_85.txt  25_70.txt  25_75.txt  25_80.txt  25_85.txt  5_70.txt  5_75.txt  5_80.txt  5_85.txt
Solving/: FeasiblePlacement.cpp  FeasiblePlacement.h  FeasiblePlacementState.h  FloorplanSolution.h  FloorplanningManager.cpp  FloorplanningManager.h  FloortplanningMangerState.h  MainLoopManager.cpp  MainLoopManager.h  PhysicsRegion.cpp  PhysicsRegion.h  PhysicsRegionState.h  PhysicsRegionType.h  PlacementsGenerator.cpp  PlacementsGenerator.h  Render.cpp  Render.h  Resources.h
Solving/Phyisics/: Physics.cpp  Physics.h  Rigidbody.cpp  Rigidbody.h
